--- a/css/css-lesson-03.css
+++ b/css/css-lesson-03.css
@@ -18,6 +18,9 @@ body {
 }
 
 .article{
+	position:  relative;
+	width:  100%;
+	overflow:  hidden;
 	background-color: #ffffff;
 	padding:  20px 0 20px 0;
 }
@@ -27,9 +30,64 @@ body {
 }
 
 .box {
+	float:  right;
 	box-sizing:  content-box; /* border box */
-	width:  300px;
+	width:  230px;
 	border:  solid black 3px;
 	padding:  10px;
 	margin:  20px;
 }
+
+.masthead {
+	width:  840px;
+	border:  solid black 3px;
+	padding:  10px;
+	margin:  20px;
+}
+
+.half, .second-half {
+	/*width:  50%*/;
+	width:  calc(50% - 40px);
+	padding:  20px;
+}
+
+.half {
+	float:  left;
+}
+
+.second-half {
+	float:  right;
+}
+
+
+.em-size-box {
+	width: 2em;
+	height: 2em;
+	background-color: orange !important;
+} 
+
+.rem-size-box {
+	width: 2rem;
+	height: 2rem;
+	background-color: red !important;
+}
+
+.new-font-size{
+	font-size:  64px;
+}
+
+.vw-vh-demo {
+	background-color: navy;
+	width: 100vw;
+	height:  100vh;
+}
+
+
+/* inside box example
+.alt-box {
+	box-sizing:  content-box; border box
+	border:  solid red; 3px;
+	padding:  10px;
+	margin:  20px;
+}
+/*
