--- a/css/css-lesson-05.css
+++ b/css/css-lesson-05.css
@@ -9,14 +9,11 @@ body {
 #wrapper {
 	margin:  2em auto;
 	max-width:  960px;
-	padding: 0 2em;
+	padding: 0 20px;
 }
 
-.grid {
-	display: grid;
-	grid-gap: 1.5rem; 
-	/*grid-template-columns: 1fr 1fr 1fr;*/
-	grid-template-columns: repeat(3, 1fr);
+#masthead, #main {
+	margin-bottom: 2rem;
 }
 
 .grid div{
