--- a/css/css-lesson-04.css
+++ b/css/css-lesson-04.css
@@ -34,7 +34,7 @@ body {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	grid-auto-rows: 100px;
-	grid-gap: .5rem;
+	grid-gap: 1rem;
 	width: 100%
 }
 
@@ -44,14 +44,13 @@ body {
 
 .wide {
 	grid-row: 3 / 5;
-	grid-column: 4 / 6;
+	grid-column: 2 / 4;
 }
 
 .tall{
-	grid-row: 2 / 4;
-	grid-column: 3 / 5;
+	grid-row: 1 / 3;
+	grid-column: 2 / 4;
 }
-
 
 
 
