--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@ top to bottom
 body {
 	background-color: #ffffff;
 	color:  #333333;
-	font-family: 'Archivo Black', sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 h1, h2, h3, h4 {
 	margin:  0;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Jost', sans-serif;
 }
 
 h1 {
@@ -84,49 +84,49 @@ h4 {
 	width: auto;
 }
 
-#nav a {
-	color: 000;
-	font-weight: 400;
-	text-decoration-color:  transparent;
-	display:  inline-block;
-	width: 100%;
-	text-align: center;
-	transition: text-decoration-color .4s cubic-bezier(.694, .0482, .335, 1);
+#nav a { 
+color: var(--body-color);
+font-weight: 300;  
+text-decoration-color: transparent; 
+display: inline-block; 
+width: 100%; 
+text-align: center; 
+transition: text-decoration-color .3s ease-in-out;
 }
 
-#nav a: hover {
-	text-decoration-color: #000;
+#nav a:hover, #nav a.active  { 
+  text-decoration-color: var(--body-color);
 }
 
 #nav.active {
-	display: block;
+  display: block;
 }
 
-#nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
-	height: 100%;
-	align-items: center;
+#nav ul { 
+  list-style: none; 
+  margin: 0; 
+  padding: 0; 
+  display: flex; 
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  align-items: center;
 }
 
 #nav li {
-	flex: 3;
+  flex: 3; 
 }
 
 #nav-button {
-	display: none;
-}
+  display: none;
+} 
 
 #nav-button-holder {
-	justify-content: flex-end;
-	display: flex;
-	width: 100%;
-	height: 100%;
-	align-items: center;
+  justify-content: flex-end;
+  display: flex; 
+  width: 100%;
+  height: 100%;
+  align-items: center;
 }
 
 .hamburger {
@@ -196,24 +196,6 @@ h4 {
     bottom: 0;
     transform: rotate(-90deg);
     transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
-
-@media all and (max-width: 699px) {
-	#nav-button {
-		display: block;
-	}
-	#nav {
-		border-bottom: 1px solid #000;
-		display: none;
-	}
-	#nav li {
-		width: 100%;
-		flex-basis: 100%;
-		margin-bottom: 1rem;
-	}
-}
-
-@media all and (min-width: 700px) {
-}
 
 
 
