--- a/css/style copy.css
+++ b/css/style copy.css
@@ -1,31 +1,6 @@
-/*stylesheet*/
-
-/*
-tiers of cascading styles
-
-importance - 
-
-1 transition
-2 !important
-3 animation
-4 normal
-
-origin -
-wbesite itself
-user
-browser
-
-specificity
-inline > id > class > type
-
-position
-top to bottom
-
-*/
-
 body {
-	background-color: #ffffff;
-	color:  #333333;
+	background-color: #000000;
+	color:  #ffffff;
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -64,7 +39,7 @@ h4 {
 }
 
 #logo a {
-	color:  #000;
+	color:  #fff;
 	text-decoration: none;
 	display:  flex;
 	width: 100%;
@@ -80,8 +55,10 @@ h4 {
 
 #logo svg {
 	margin-right: .25rem;
-	height: 2.5rem;
+	height: 3.5rem;
 	width: auto;
+  padding-top: 1rem;
+  padding-right: .5rem;
 }
 
 #nav a { 
@@ -197,5 +174,112 @@ transition: text-decoration-color .3s ease-in-out;
     transform: rotate(-90deg);
     transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
+@media screen and (min-width: 320px) {
+  body {
+    font-size: calc(12px + 4 * ((100vw - 320px) / 960));
+  }
+}
 
+
+#intro {
+  display: flex;
+  align-items: center;
+  height: 70vh;
+}
+
+#work h3 {
+  margin-bottom: 2rem;
+}
+
+.work-item {
+  overflow: hidden;
+  height: 0;
+  position: relative;
+  width: 100%; 
+  padding-top: calc((1 / 1) * 100%);
+  background-color: var(--body-color);
+}
+
+.work-item .inner {
+  text-decoration: none;
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  align-items: flex-end;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.work-item .inner .work-inside {
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+  color: #fff;
+  padding: 2rem;
+  width: 100%;
+  background-color:rgba(0,0,0,0.6);
+  text-align: right;
+}
+
+.work-item .inner:hover .work-inside {
+  opacity: 1;
+}
+
+.work-item img {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#footer {
+  text-align: left;
+  font-size: .85rem;
+}
+
+@media all and (max-width: 699px) { 
+  #nav-button {
+    display: block;
+  }
+  #nav {
+    border-bottom: 1px solid var(--body-color);
+    padding-bottom: 1rem;
+    display: none;
+  }
+  #nav li { 
+    width: 100%; 
+    flex-basis: 100%;
+    margin-bottom: 1rem;
+  } 
+  #intro-holder h1 {
+    font-size: 3.2rem
+  }
+
+  .work-item .inner .work-inside {
+    opacity: 1;
+  }
+
+}
+
+@media all and (min-width: 700px) {
+
+  #intro {
+    height: 70vh;
+  }
+
+  #intro-holder {
+    padding: 0 5em;
+  }
+
+}
+
+@media screen and (min-width: 1220px) {
+  body {
+    font-size: 18px;
+  }
+}
 
